Bug 393813 - lightweight dropdown implementation. Submenus are supported with proper layout.  Dropdown alignment cleaned up on banner.  Still need to implement "dismiss when clicked" behavior and default styles for dropdown items.

--- a/bundles/org.eclipse.orion.client.core/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.core/web/css/ide.css
@@ -215,7 +215,6 @@ h2 {
 	background-image: url(../images/core_sprites.png);
 	margin-left: 0px;
 	padding-right: 0px;
-	margin-top: 6px;
 }
 
 .thumbnail {
